Prevent titlebar from shrinking
The first window on the demo page, when minimized, would previously get its titlebar completely cut off.

--- a/src/layout.css
+++ b/src/layout.css
@@ -33,6 +33,7 @@ body > .window-titlebar {
 	align-items: center;
 	white-space: nowrap;
 	overflow: hidden;
+	flex-shrink: 0;
 }
 .os-window .window-title-area {
 	position: relative;
